jvm practice